[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/scenes/rooms/room_abstract.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scripts/globals/game_canvas.gd" type="Script" id=2]
[ext_resource path="res://assets/scenes/UserInterface.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/globals/sound_manager.gd" type="Script" id=4]
[ext_resource path="res://assets/shaders/camera_overlay.tres" type="Material" id=9]
[ext_resource path="res://assets/scripts/globals/game_overlay.gd" type="Script" id=10]
[ext_resource path="res://assets/shaders/gradient_dream.tres" type="Texture" id=12]
[ext_resource path="res://assets/scripts/globals/update_controller.gd" type="Script" id=13]
[ext_resource path="res://assets/sounds/music/Signal_Creek_BN_v1.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/music/LM_SignCreek_Grunge_v1.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/music/Signal_Creek_Cafe_v1.mp3" type="AudioStream" id=16]

[sub_resource type="Environment" id=3]
background_mode = 4
tonemap_mode = 2
glow_enabled = true
glow_levels/2 = true
glow_bloom = 0.02
adjustment_enabled = true
adjustment_color_correction = ExtResource( 12 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 cam_offset = vec2(0.0, 0.0);

void vertex() {
	VERTEX += cam_offset;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/cam_offset = Vector2( 0, 0 )

[node name="Game" type="Node2D"]
process_priority = 1
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 2 )
margin_left = -3.0
margin_top = -3.0
margin_right = 319.0
margin_bottom = 179.0
rect_min_size = Vector2( 322, 182 )
rect_scale = Vector2( 3, 3 )
stretch = true
script = ExtResource( 13 )
_elevator_focus_position = Vector2( 472, 216 )

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 322, 182 )
handle_input_locally = false
disable_3d = true
usage = 3
render_target_update_mode = 3
gui_disable_input = true

[node name="Room" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="GameOverlay" type="Panel" parent="."]
material = ExtResource( 9 )
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 10 )
__meta__ = {
"_editor_description_": "For screen-space shader"
}

[node name="UserInterface" parent="." instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 0.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="SoundManager" type="Node" parent="."]
script = ExtResource( 4 )
music_bandn = ExtResource( 14 )
music_hallway = ExtResource( 16 )
music_topicspot = ExtResource( 15 )
music_elevator = ExtResource( 14 )
music_starter = ExtResource( 14 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="SoundManager"]
autoplay = true
bus = "SoundEffects"

[node name="Ambience" type="AudioStreamPlayer" parent="SoundManager"]
bus = "Ambience"

[node name="Music" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 14 )
bus = "Music"

[node name="UISounds" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource( 14 )
bus = "UISounds"

[connection signal="doorway_entered" from="." to="." method="_on_Game_doorway_entered"]
